# web_scraping_demo

./: README.md  better_readme.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml  postCreateCommand.sh
src/: automation_direct_example.py  beautifulsoup_example.py  selenium_example.py
